Reintroduce div without animated loader

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 </head>
 <body>
 		
+        <div id="mask">  
+            
+        </div>
+
         <!-- BEGIN HEADER -->
         <header id="header" role="banner">
             <div class="jt_row container">
