--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 <body>
 		
         <div id="mask">  
-            
+            <div class="loader">
+              <img src="svg-loaders/tail-spin.svg" alt='loading'>
+            </div>
         </div>
 
         <!-- BEGIN HEADER -->
