Change slide image 1

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>Elixir - HTML Template</title>
+    <title>Sprigs Grille</title>
     <!-- GOOGLE FONTS -->
     <link href='http://fonts.googleapis.com/css?family=Yellowtail%7cCabin:400,500,600,700,400italic,700italic%7cLibre+Baskerville:400italic%7cGreat+Vibes%7cOswald:400,300,700%7cOpen+Sans:600italic,700' rel='stylesheet' type='text/css'>
 
@@ -69,9 +69,9 @@
             <div class="overlay"></div>
             <!-- SLIDER IMAGES -->
             <div id="owl-main" class="owl-carousel">
-                <div class="item"><img src="https://poseidonimaging.github.io/sprigsgrille/images/slider/01.jpg" alt="Slide 01"></div>
-                <div class="item"><img src="https://poseidonimaging.github.io/sprigsgrille/images/slider/02.jpg" alt="Slide 02"></div>
-                <div class="item"><img src="https://poseidonimaging.github.io/sprigsgrille/images/slider/03.jpg" alt="Slide 03"></div>
+                <div class="item"><img src="images/assets/home-01.jpg" alt="Slide 01"></div>
+                <div class="item"><img src="images/slider/02.jpg" alt="Slide 02"></div>
+                <div class="item"><img src="images/slider/03.jpg" alt="Slide 03"></div>
             </div>
             <!-- SLIDER CONTENT -->
             <div class="slide-content">
