--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="overlay"></div>
             <!-- SLIDER IMAGES -->
             <div id="owl-main" class="owl-carousel">
-                <div class="item"><img src="http://www.planwallpaper.com/static/images/colorful-triangles-background_yB0qTG6.jpg" alt="Slide 01"></div>
+                <div class="item"><img src="images/slider/01.jpg" alt="Slide 01"></div>
                 <div class="item"><img src="images/slider/02.jpg" alt="Slide 02"></div>
                 <div class="item"><img src="images/slider/03.jpg" alt="Slide 03"></div>
             </div>
