--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/pathLoader.js"></script>
-    <script src="js/owl-carousel/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="js/owl-carousel/owl.carousel.min.js"></script>
     <script src="js/jquery.inview.js"></script>
     <script src="js/jquery.nav.js"></script>
     <script src="js/jquery.mb.YTPlayer.js"></script>
