--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Restaurant Template</title>
+  <title>Sprigs Grille</title>
 
   <meta name="description" content="">
   <meta name="theme-color" content="#444444">
@@ -23,7 +23,7 @@
 <div class="banner">
   <div class="header">
     <div class="header-inner container clear">
-      <a class="logo" href="#"><span class="sr">Lambda Logo</span></a>
+      <a class="logo" href="#"><span class="sr">Sprigs Grille</span></a>
       <input type="checkbox" id="navigation-toggle-checkbox" name="navigation-toggle-checkbox" class="navigation-toggle-checkbox sr">
       <label for="navigation-toggle-checkbox" class="navigation-toggle-label" onclick>
         <span class="navigation-toggle-label-inner">
@@ -48,8 +48,8 @@
   </div>
   <div class="banner-inner container">
     <h1 class="banner-lead">
-      <span class="banner-lead-1">the right ingredients</span>
-      <span class="banner-lead-2">for the right food</span>
+      <span class="banner-lead-1">Americana fare in an upscale environment</span>
+      <span class="banner-lead-2">Prepared from scratch with ingredients from local farmers</span>
     </h1>
     <div class="banner-buttons">
       <a href="#reservations" class="button button-primary">Book a table</a>
@@ -64,9 +64,7 @@
       <div class="about-block-content col-6-l">
         <h2 class="heading">Just the right food</h2>
         <p>
-          If you've been to one of our restaurants, you've seen - and tasted - what keeps our customers coming back for more. <br>
-          Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet coffees makes us hard to resist! <br>
-          Stop in today and check us out!
+          Our main dining room is the perfect spot for a casual dinner out or a date night experience. Our lounge / bar area features 6 flat screen HDTVs, 8 beer taps featuring rotating local micro brews, a great wine list, and hand crafted cocktails. We are the perfect happy hour spot, daily 4-6. Whether you are looking for a spot to watch the game, or a fine dining experience in a casual upscale atmosphere, Sprigs Grille is the place. We're nestled in the new modern Embassy Suites Hotel, right in the heart of Tanasbourne.
         </p>
         <img class="img-fluid about-chef" src="img/chef.png" alt="Chef">
       </div>
@@ -83,9 +81,7 @@
       <h2 class="heading-secondary">Fine ingredients</h2>
       <div class="feature-box-content">
         <p>
-          If you've been to one of our restaurants, you've seen - and tasted - what keeps our customers coming back for more. <br>
-          Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet coffees makes us hard to resist! <br>
-          Stop in today and check us out!
+          Our Executive Chef focuses on regional and global cuisine while creating impactful flavors. The Pacific Northwest is a haven for bountiful ingredients. We feature local items such as Carlton Farms Pork, Double R Ranch Beef, Monterey Bay Calamari, What’s the Scoop Ice Cream and local produce. Our Chef has traveled the globe and has honed his skills from AAA Four Diamond Resorts, Skamania Lodge, Nike World HQ and small family run restaurants.
         </p>
         <div class="feature-image-group clear">
           <img class="img-fluid feature-image feature-image-1" src="img/01-wheat.jpg" alt="Wheat">
