--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   </div>
   <div class="banner-inner container">
     <h1 class="banner-lead">
-      <span class="banner-lead-1">Americana fare in an upscale environment</span>
-      <span class="banner-lead-2">Prepared from scratch with ingredients from local farmers</span>
+      <span class="banner-lead-1">Americana fare in an upscale environment prepared from scratch with ingredients from local farmers</span>
+      <!--<span class="banner-lead-2">Prepared from scratch with ingredients from local farmers</span>-->
     </h1>
     <div class="banner-buttons">
       <a href="#reservations" class="button button-primary">Book a table</a>
