--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
   <div class="banner-inner container">
     <h1 class="banner-lead">
-      <span class="banner-lead-1">Americana fare in an upscale environment prepared from scratch with ingredients from local farmers</span>
+      <span class="banner-lead-1">Americana fare prepared from scratch with ingredients from local farmers</span>
       <!--<span class="banner-lead-2">Prepared from scratch with ingredients from local farmers</span>-->
     </h1>
     <div class="banner-buttons">
@@ -62,7 +62,7 @@
   <div class="about-block-inner container">
     <div class="clear text-center">
       <div class="about-block-content col-6-l">
-        <h2 class="heading">Just the right food</h2>
+        <h2 class="heading">The right place</h2>
         <p>
           Our main dining room is the perfect spot for a casual dinner out or a date night experience. Our lounge / bar area features 6 flat screen HDTVs, 8 beer taps featuring rotating local micro brews, a great wine list, and hand crafted cocktails. We are the perfect happy hour spot, daily 4-6. Whether you are looking for a spot to watch the game, or a fine dining experience in a casual upscale atmosphere, Sprigs Grille is the place. We're nestled in the new modern Embassy Suites Hotel, right in the heart of Tanasbourne.
         </p>
