--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Dynamic Menu -->
   <script src="http://static.cloudstitch.io/cloudstitch.js"></script>
   <link type="cloudstitch/gsheet" href="http://cloudstitch.io/sprigsgrille/sprigs-menu/datasource/menu" />
-  
+
 </head>
 <body>
 
@@ -121,6 +121,7 @@
             </div>
           </li>
         </div>
+        <div widget="sprigsgrille/sprigs-menu"></div>
 
           <li class="food-menu-item">
             <div class="food-menu-item-header clear">
