--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Dynamic Menu -->
   <script src="http://static.cloudstitch.io/cloudstitch.js"></script>
-  <link type="cloudstitch/gsheet" href="http://cloudstitch.io/sprigsgrille/sprigs-grille-menu/datasource/menu" />
+  <link type="cloudstitch/gsheet" href="http://cloudstitch.io/sprigsgrille/sprigs-menu/datasource/index" />
 
 </head>
 <body>
@@ -114,10 +114,10 @@
           <ul class="food-menu-list">
           <li class="food-menu-item">
             <div class="food-menu-item-header clear">
-              <h3 class="food-menu-heading" connect="Soups-Salads!col(Name)"></h3>
-              <span class="food-menu-price" connect="Soups-Salads!col(Price)"></span>
+              <h3 class="food-menu-heading" connect="Soups-Salads!col(Right-Col-Name)"></h3>
+              <span class="food-menu-price" connect="Soups-Salads!col(Right-Col-Price)"></span>
             </div>
-            <div class="food-menu-summary" connect="Soups-Salads!col(Description)">
+            <div class="food-menu-summary" connect="Soups-Salads!col(Right-Col-Description)">
             </div>
           </li>
         </div>
