--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="banner">
   <div class="header">
     <div class="header-inner container clear">
-      <a class="logo" href="#"><span class="sr">Sprigs Grille</span></a>
+      <a class="logo" href="#"><span class="sr"><img src="/img/sprigs-grille-logo.png">Sprigs Grille</span></a>
       <input type="checkbox" id="navigation-toggle-checkbox" name="navigation-toggle-checkbox" class="navigation-toggle-checkbox sr">
       <label for="navigation-toggle-checkbox" class="navigation-toggle-label" onclick>
         <span class="navigation-toggle-label-inner">
