added full url to logo src

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="banner">
   <div class="header">
     <div class="header-inner container clear">
-      <img src="/img/sprigs-grille-logo.png">Sprigs Grille
+      <img src="https://poseidonimaging.github.io/sprigsgrille/img/sprigs-grille-logo.png">Sprigs Grille
       <input type="checkbox" id="navigation-toggle-checkbox" name="navigation-toggle-checkbox" class="navigation-toggle-checkbox sr">
       <label for="navigation-toggle-checkbox" class="navigation-toggle-label" onclick>
         <span class="navigation-toggle-label-inner">
