--- a/index.html
+++ b/index.html
@@ -98,33 +98,9 @@
   </div>
 </div>
 
-<!--<cloudstitch-handlebars user="sprigsgrille" app="new-sprigs-grille-menu"></cloudstitch-handlebars> -->
+<cloudstitch-handlebars user="sprigsgrille" app="new-sprigs-grille-menu"></cloudstitch-handlebars>
 
-<div id="menu" class="content-block food-menu-block">
-  <div class="food-menu-block-inner container">
-    <div class="clear">
-      <div class="food-menu-content">
-
-        <h2 class="heading">Soups and Salads</h2>
-        {{#each Soups-Salads}}
-
-          <li class="food-menu-item">
-            <div class="food-menu-item-header clear">
-              <h3 class="food-menu-heading">{{Left-Col-Name}}</h3>
-              <span class="food-menu-price">{{Left-Col-Price}}</span>
-            </div>
-            <div class="food-menu-summary">
-              <p>
-                {{Left-Col-Description}}
-              </p>
-            </div>
-          </li>
-        {{/each}}
-
-      </div>
-    </div>
-  </div>
-</div>
+ 
 
 <!--<div id="menu" class="content-block food-menu-block">
   <div class="food-menu-block-inner container">
