--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </div>
   <div class="banner-inner container">
     <h1 class="banner-lead">
-      <span class="banner-lead-1">Americana fare prepared from scratch with ingredients from local farmers</span>
+      <span class="banner-lead-1" style="">Americana fare prepared from scratch with ingredients from local farmers</span>
       <!--<span class="banner-lead-2">Prepared from scratch with ingredients from local farmers</span>-->
     </h1>
     <div class="banner-buttons">
@@ -252,17 +252,8 @@
 <div id="reviews" class="content-block reviews-block">
   <div class="reviews-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">Guest Reviews</h2>
-      <blockquote class="pad-30">
-        <p>
-          If you've been to one of our restaurants, you've seen - and tasted - what keeps our customers coming back for more.
-          Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet coffees makes us hard to resist!
-          Stop in today and check us out!
-        </p>
-        <cite>
-          food inc, New York
-        </cite>
-      </blockquote>
+      <h2 class="heading-secondary">Make Reservation</h2>
+      <link href="http://www.opentable.com/dcwidget/2015/dinerschoicebadges.css" rel="stylesheet" type="text/css" /><a href="http://www.opentable.com/rest_profile.aspx?rid=193552&restref=193552" class="ot-dc-badge ot-dc-badge--p">Book now</a>
     </div>
   </div>
 </div>
@@ -339,8 +330,8 @@
       <div class="footer-column col-4-l">
         <h3 class="footer-heading">Opening Hours</h3>
         <p>
-          <strong>Mon-Thu:</strong> 7.00am - 8.00pm <br>
-          <strong>Fri-Sun:</strong> 7.00am - 10.00pm
+          <strong>Lounge:</strong> 4-11 Daily (Happy Hour 4-6 Daily) <br>
+          <strong>Dining Room:</strong> Dining Room 5-10 Daily
         </p>
         <ul class="payment-types icon-list-inline">
           <li><span class="payment payment-mastercard"><span class="sr">Mastercard</span></a></li>
@@ -352,8 +343,10 @@
       <div class="footer-column col-4-l">
         <h3 class="footer-heading">Our Location</h3>
         <p>
-          19th Paradise Street Sitia <br>
-          128 Meserole Avenue
+          Sprigs Grille<br>
+          20001 NW Tanasbourne Dr.<br>
+          Hillsboro OR 97124<br>
+          503-718-0007 (ask for Sprigs)
         </p>
         <ul class="footer-social-list icon-list-inline">
           <li class="navigation-item-social"><a class="social social-twitter" href="#"><span class="sr">Twitter</span></a></li>
