More updating the homepage

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li class="navigation-item"><a href="#about">About</a></li>
           <li class="navigation-item"><a href="#ingredients">Ingredients</a></li>
           <li class="navigation-item"><a href="#menu">Menu</a></li>
-          <li class="navigation-item"><a href="#reviews">Reviews</a></li>
+          <li class="navigation-item"><a href="#reviews">Reservations</a></li>
           <li class="navigation-item"><a href="#reservations">Reservations</a></li>
         </ul>
         <ul class="navigation-social">
@@ -249,7 +249,7 @@
 </div> -->
 
 
-<div id="reviews" class="content-block reviews-block">
+<div id="reservations" class="content-block reviews-block">
   <div class="reviews-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
       <h2 class="heading-secondary">Make Reservation</h2>
@@ -260,7 +260,7 @@
 
 
 
-<div id="reservations" class="content-block reservations-block">
+<div id="Gallery" class="content-block reservations-block">
   <div class="reservations-block-inner container">
     <div class="clear">
       <div class="reservation-block-img col-3-l none block-l">
