--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           <li class="navigation-item"><a href="#about">About</a></li>
           <li class="navigation-item"><a href="#ingredients">Ingredients</a></li>
           <li class="navigation-item"><a href="#menu">Menu</a></li>
-          <li class="navigation-item"><a href="#reviews">Reservations</a></li>
           <li class="navigation-item"><a href="#reservations">Reservations</a></li>
+          <li class="navigation-item"><a href="#gallery">Gallery</a></li>
         </ul>
         <ul class="navigation-social">
           <li class="navigation-item-social"><a class="social social-twitter" href="#"><span class="sr">Twitter</span></a></li>
@@ -260,7 +260,7 @@
 
 
 
-<div id="Gallery" class="content-block reservations-block">
+<div id="gallery" class="content-block reservations-block">
   <div class="reservations-block-inner container">
     <div class="clear">
       <div class="reservation-block-img col-3-l none block-l">
