--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
   <div class="reservations-block-inner container">
     <div class="clear">
       <div class="reservation-block-img col-3-l none block-l">
-        <img class="img-fluid " src="img/food-01.jpg" alt="Food">
+        <img class="img-fluid " src="img/chicken.jpg" alt="Food">
       </div>
       <div class="reservation-block-img col-6-m col-3-l none block-m">
-        <img class="img-fluid " src="img/food-02.jpg" alt="Food">
+        <img class="img-fluid " src="img/food.jpg" alt="Food">
       </div>
       <div class="reservation-block-form col-6-m">
         <div class="text-center">
@@ -321,10 +321,9 @@
   <div class="footer-inner container">
     <div class="clear">
       <div class="footer-column col-4-l">
-        <h3 class="footer-heading">About us</h3>
+        <h3 class="footer-heading">Why Visit Us</h3>
         <p>
-          Lambda's new and expanded Chelsea location represents a truly <strong>authentic</strong> Greek
-          patisserie, featuring breakfasts of fresh croissants and steaming bowls of caf&eacute;.
+          If you've been to Sprigs Grille, you've seen - and tasted - what keeps our customers coming back for more. Perfect materials and freshly baked food
         </p>
       </div>
       <div class="footer-column col-4-l">
