--- a/index.html
+++ b/index.html
@@ -263,13 +263,15 @@
 <div id="gallery" class="content-block reservations-block">
   <div class="reservations-block-inner container">
     <div class="clear">
-      <div class="reservation-block-img col-3-l none block-l">
+      <div class="reservation-block-img col-4-l none block-l">
         <img class="img-fluid " src="img/chicken.jpg" alt="Food">
       </div>
-      <div class="reservation-block-img col-6-m col-3-l none block-m">
+      <div class="reservation-block-img col-6-m col-4-l none block-m">
         <img class="img-fluid " src="img/food.jpg" alt="Food">
       </div>
-      
+      <div class="reservation-block-img col-6-m col-4-l none block-m">
+        <img class="img-fluid " src="img/fish-2.jpg" alt="Food">
+      </div>
     </div>
   </div>
 </div>
