--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
 
 <div id="gallery" class="content-block reservations-block">
   <div class="reservations-block-inner container">
+    <h2 class="heading-secondary">Gallery</h2>
     <div class="clear">
       <div class="reservation-block-img col-4-l none block-l">
         <img class="img-fluid " src="img/chicken.jpg" alt="Food">
