Gallery Heading Update

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 <div id="gallery" class="content-block reservations-block">
   <div class="reservations-block-inner container">
     <div class="clear">
-      <h2 class="heading">The right place</h2>
+      <h2 class="heading">Gallery</h2>
       <div class="reservation-block-img col-4-l none block-l">
         <img class="img-fluid " src="img/chicken.jpg" alt="Food">
       </div>
