--- a/events.html
+++ b/events.html
@@ -22,21 +22,13 @@
 </head>
 <body>
 
-
-
-<div id="gallery" class="content-block reservations-block">
-  <div class="reservations-block-inner container">
-    <div class="clear">
-      <h2 class="heading">Gallery</h2>
-      <div class="reservation-block-img col-4-l none block-l">
-        <img class="img-fluid " src="img/chicken.jpg" alt="Food">
-      </div>
-      <div class="reservation-block-img col-6-m col-4-l none block-m">
-        <img class="img-fluid " src="img/food.jpg" alt="Food">
-      </div>
-      <div class="reservation-block-img col-6-m col-4-l none block-m">
-        <img class="img-fluid " src="img/fish-2.jpg" alt="Food">
-      </div>
+<div id="reservations" class="content-block reviews-block">
+  <div class="reviews-block-inner container">
+    <div class="feature-box text-center col-12-m col-8-l no-float center">
+      <h2 class="heading-secondary">Make Reservation</h2>
+      <p>
+        Starters $6.00 Butternut Squash Soup vegan: ginger coconut cream + smoked hazelnuts + sea salt maple croutons Pear & Belgium Endive Salad poached glu-wine pears + blue cheese + candied walnuts + fennel + sherry vinaigrette + bacon Entrées Apple-brined Roasted Tom Turkey mashed potato + apple-walnut sage stuffing + caramelized root vegetables + cranberry sauce + gravy regular size $18.00 or petite size $14.00 suggested wine pairing Erath Pinot Blanc - OR Slow Roasted Double R Ranch Prime Rib of Beef rosemary sea salt crust english Yorkshire pudding + mashed Yukon potato + root vegetables + au jus + horseradish 12 oz. cut $28.00 or 8 oz. cut $20.00 suggested wine pairing Clos du Bois Cabernet - CA Dessert $6.00 Pumpkin Tart short dough filled with pumpkin custard + vanilla whipped + candied cinnamon walnuts + caramel sauce Cranberry Apple Strudel flaky butter puff pastry with sweet fall spiced apples & tart cranberries. Served with tillamook sea salt caramel ice cream
+      </p>  
     </div>
   </div>
 </div>
