Updated background for events

--- a/events.html
+++ b/events.html
@@ -25,7 +25,7 @@
 <div id="reservations" class="content-block reviews-block">
   <div class="reviews-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">Make Reservation</h2>
+      <h2 class="heading-secondary">Thanksgiving Menu</h2>
       <p>
         Starters $6.00 Butternut Squash Soup vegan: ginger coconut cream + smoked hazelnuts + sea salt maple croutons Pear & Belgium Endive Salad poached glu-wine pears + blue cheese + candied walnuts + fennel + sherry vinaigrette + bacon Entrées Apple-brined Roasted Tom Turkey mashed potato + apple-walnut sage stuffing + caramelized root vegetables + cranberry sauce + gravy regular size $18.00 or petite size $14.00 suggested wine pairing Erath Pinot Blanc - OR Slow Roasted Double R Ranch Prime Rib of Beef rosemary sea salt crust english Yorkshire pudding + mashed Yukon potato + root vegetables + au jus + horseradish 12 oz. cut $28.00 or 8 oz. cut $20.00 suggested wine pairing Clos du Bois Cabernet - CA Dessert $6.00 Pumpkin Tart short dough filled with pumpkin custard + vanilla whipped + candied cinnamon walnuts + caramel sauce Cranberry Apple Strudel flaky butter puff pastry with sweet fall spiced apples & tart cranberries. Served with tillamook sea salt caramel ice cream
       </p>  
