Updated HTML for events to link to proper style sheet

--- a/events.html
+++ b/events.html
@@ -22,8 +22,8 @@
 </head>
 <body>
 
-<div id="reservations" class="content-block reviews-block">
-  <div class="reviews-block-inner container">
+<div id="events" class="content-block events-block">
+  <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
       <h2 class="heading-secondary">Thanksgiving Menu</h2>
       <p>
