--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <li class="navigation-item"><a href="#menu">Menu</a></li>
           <li class="navigation-item"><a href="#reservations">Reservations</a></li>
           <li class="navigation-item"><a href="#gallery">Gallery</a></li>
+          <li class="navigation-item"><a href="/events.html" target="blank">Events</a></li>
         </ul>
         <ul class="navigation-social">
           <li class="navigation-item-social"><a class="social social-twitter" href="#"><span class="sr">Twitter</span></a></li>
