--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
           <li class="navigation-item"><a href="https://poseidonimaging.github.io/sprigsgrille/events.html" target="blank">Events</a></li>
         </ul>
         <ul class="navigation-social">
-          <li class="navigation-item-social"><a class="social social-twitter" href="#"><span class="sr">Twitter</span></a></li>
-          <li class="navigation-item-social"><a class="social social-facebook" href="#"><span class="sr">Facebook</span></a></li>
-          <li class="navigation-item-social"><a class="social social-google-plus" href="#"><span class="sr">Google Plus</span></a></li>
+          <li class="navigation-item-social"><a class="social social-facebook" href="https://www.facebook.com/sprigsgrille/"><span class="sr">Facebook</span></a></li>
         </ul>
       </div>
     </div>
@@ -309,12 +307,6 @@
           Hillsboro OR 97124<br>
           503-718-0007 (ask for Sprigs)
         </p>
-        <ul class="footer-social-list icon-list-inline">
-          <li class="navigation-item-social"><a class="social social-twitter" href="#"><span class="sr">Twitter</span></a></li>
-          <li class="navigation-item-social"><a class="social social-facebook" href="#"><span class="sr">Facebook</span></a></li>
-          <li class="navigation-item-social"><a class="social social-google-plus" href="#"><span class="sr">Google Plus</span></a></li>
-          <li class="navigation-item-social"><a class="social social-youtube" href="#"><span class="sr">YouTube</span></a></li>
-        </ul>
       </div>
     </div>
   </div>
