--- a/events.html
+++ b/events.html
@@ -26,9 +26,31 @@
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
       <h2 class="heading-secondary">Thanksgiving Menu</h2>
-      <p>
-        Starters $6.00 Butternut Squash Soup vegan: ginger coconut cream + smoked hazelnuts + sea salt maple croutons Pear & Belgium Endive Salad poached glu-wine pears + blue cheese + candied walnuts + fennel + sherry vinaigrette + bacon Entrées Apple-brined Roasted Tom Turkey mashed potato + apple-walnut sage stuffing + caramelized root vegetables + cranberry sauce + gravy regular size $18.00 or petite size $14.00 suggested wine pairing Erath Pinot Blanc - OR Slow Roasted Double R Ranch Prime Rib of Beef rosemary sea salt crust english Yorkshire pudding + mashed Yukon potato + root vegetables + au jus + horseradish 12 oz. cut $28.00 or 8 oz. cut $20.00 suggested wine pairing Clos du Bois Cabernet - CA Dessert $6.00 Pumpkin Tart short dough filled with pumpkin custard + vanilla whipped + candied cinnamon walnuts + caramel sauce Cranberry Apple Strudel flaky butter puff pastry with sweet fall spiced apples & tart cranberries. Served with tillamook sea salt caramel ice cream
-      </p>  
+      
+      <h3>Starters</h3>
+      <p><b>$6.00</b></p>
+      <h4>Butternut Squash Soup</h4>
+      <p>vegan: ginger coconut cream + smoked hazelnuts + sea salt maple croutons</p>
+
+      <h4>Pear and Belgium Endive Salad</h4>
+      <p>poached glu-wine pears + blue cheese + candied walnuts + fennel + sherry vinaigrette + bacon</p>
+
+      <h3>Entrées</h3>
+      <h4>Apple-brined Roasted Tom Turkey</h4>
+      <p>mashed potato + apple-walnut sage stuffing + caramelized root vegetables + cranberry sauce + gravy regular size<br>
+      regular size $18.00 or petite size $14.00 suggested wine pairing Erath Pinot Blanc - OR</p>
+
+      <h4>Slow Roasted Double R Ranch Prime Rib of Beef</h4>
+      <p>rosemary sea salt crust english Yorkshire pudding + mashed Yukon potato + root vegetables + au jus + horseradish<br>
+      12 oz. cut $28.00 or 8 oz. cut $20.00 suggested wine pairing Clos du Bois Cabernet - CA</p>
+
+      <h3>Dessert</h3>
+      <p><b>$6.00</b></p>
+      <h4>Pumpkin Tart</h4>
+      <p>short dough filled with pumpkin custard + vanilla whipped + candied cinnamon walnuts + caramel sauce</p>
+
+      <h4>Cranberry Apple Strudel</h4>
+      <p>flaky butter puff pastry with sweet fall spiced apples and tart cranberries. Served with tillamook sea salt caramel ice cream</p>
     </div>
   </div>
 </div>
