Trying to add another event

--- a/events.html
+++ b/events.html
@@ -55,6 +55,39 @@
   </div>
 </div>
 
+<div id="events" class="content-block events-block">
+  <div class="events-block-inner container">
+    <div class="feature-box text-center col-12-m col-8-l no-float center">
+      <h2 class="heading-secondary">Thanksgiving Menu</h2>
+      
+      <h3><u>Starters</u></h3>
+      <p><b>$6.00</b></p>
+      <h4>Butternut Squash Soup</h4>
+      <p>vegan: ginger coconut cream + smoked hazelnuts + sea salt maple croutons</p>
+
+      <h4>Pear and Belgium Endive Salad</h4>
+      <p>poached glu-wine pears + blue cheese + candied walnuts + fennel + sherry vinaigrette + bacon</p>
+
+      <h3><u>Entrées</u></h3>
+      <h4>Apple-brined Roasted Tom Turkey</h4>
+      <p>mashed potato + apple-walnut sage stuffing + caramelized root vegetables + cranberry sauce + gravy regular size<br>
+      regular size $18.00 or petite size $14.00 suggested wine pairing Erath Pinot Blanc - OR</p>
+
+      <h4>Slow Roasted Double R Ranch Prime Rib of Beef</h4>
+      <p>rosemary sea salt crust english Yorkshire pudding + mashed Yukon potato + root vegetables + au jus + horseradish<br>
+      12 oz. cut $28.00 or 8 oz. cut $20.00 suggested wine pairing Clos du Bois Cabernet - CA</p>
+
+      <h3><u>Dessert</u></h3>
+      <p><b>$6.00</b></p>
+      <h4>Pumpkin Tart</h4>
+      <p>short dough filled with pumpkin custard + vanilla whipped + candied cinnamon walnuts + caramel sauce</p>
+
+      <h4>Cranberry Apple Strudel</h4>
+      <p>flaky butter puff pastry with sweet fall spiced apples and tart cranberries. Served with tillamook sea salt caramel ice cream</p>
+    </div>
+  </div>
+</div>
+
 <script src="js/vendor/wow.js"></script>
 <script src="js/vendor/webfontloader.js"></script>
 <script src="js/default.js"></script>
