Testing out formats

--- a/events.html
+++ b/events.html
@@ -58,24 +58,23 @@
 <div id="events" class="content-block events-block">
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">Thanksgiving Menu</h2>
+      <h2 class="heading-secondary">Sprigs Grille and Sokol Blosser Wine Dinner</h2>
       
-      <h3><u>Starters</u></h3>
-      <p><b>$6.00</b></p>
-      <h4>Butternut Squash Soup</h4>
-      <p>vegan: ginger coconut cream + smoked hazelnuts + sea salt maple croutons</p>
+      <p>Executive Chef Russell Kool of Sprigs Grille (Embassay Suites Portland/Hillsboro) and Sokol Blosser are teaming up for a six course meal. Check out the menu + wine pairings below and contact 503-718-0007 for reservations. Space is very limited! To learn more about Sprigs Grille visit www.sprigsgrille.com or  www.portlandhillsboro.embassysuites.com.</p>
+
+      <h3><u>1st</u></h3>
+      <h4>Tart of Figs & Fromage Blanc</h4> 
+      <p>pistachio + prosciutto + cider espuma ~ 2013 Willamette Valley Chardonnay</p>
 
       <h4>Pear and Belgium Endive Salad</h4>
       <p>poached glu-wine pears + blue cheese + candied walnuts + fennel + sherry vinaigrette + bacon</p>
 
-      <h3><u>Entrées</u></h3>
-      <h4>Apple-brined Roasted Tom Turkey</h4>
-      <p>mashed potato + apple-walnut sage stuffing + caramelized root vegetables + cranberry sauce + gravy regular size<br>
-      regular size $18.00 or petite size $14.00 suggested wine pairing Erath Pinot Blanc - OR</p>
-
-      <h4>Slow Roasted Double R Ranch Prime Rib of Beef</h4>
-      <p>rosemary sea salt crust english Yorkshire pudding + mashed Yukon potato + root vegetables + au jus + horseradish<br>
-      12 oz. cut $28.00 or 8 oz. cut $20.00 suggested wine pairing Clos du Bois Cabernet - CA</p>
+      <h3><u>2nd</u></h3>
+      <h4>Candy Striped Beets + Frisee</h4> 
+      <h4>Goat Cheese Mousse + hazelnut</h4>  
+      <h4>Melon + Chile beet wine gele</h4>
+      <p>~ Evolution Brut Sparkling</p>
+      
 
       <h3><u>Dessert</u></h3>
       <p><b>$6.00</b></p>
