--- a/events.html
+++ b/events.html
@@ -66,18 +66,46 @@
       
       <p>Executive Chef Russell Kool of Sprigs Grille (Embassay Suites Portland/Hillsboro) and Sokol Blosser are teaming up for a six course meal. Check out the menu + wine pairings below and contact 503-718-0007 for reservations. Space is very limited!</p>
 
+      <p>12/10/2016 (5:00pm)</p>
+
       <h3><u>1st</u></h3>
       <h4>Tart of Figs & Fromage Blanc</h4> 
-      <p>pistachio + prosciutto + cider espuma ~ 2013 Willamette Valley Chardonnay</p>
-
-      <h4>Pear and Belgium Endive Salad</h4>
-      <p>poached glu-wine pears + blue cheese + candied walnuts + fennel + sherry vinaigrette + bacon</p>
+      <h4>Pistachio + Prosciutto + Cider Espuma</h4> 
+      <p>~ 2013 Willamette Valley Chardonnay</p>
 
       <h3><u>2nd</u></h3>
       <h4>Candy Striped Beets + Frisee</h4> 
       <h4>Goat Cheese Mousse + hazelnut</h4>  
       <h4>Melon + Chile beet wine gele</h4>
       <p>~ Evolution Brut Sparkling</p>
+
+      <h3><u>3rd</u><h3> 
+      <h4>Oregon Salmon – rosemary bush cold smoke</h4>
+      <h4>Cannelloni kabocha + beluga lentil</h4> 
+      <h4>Cauliflower nage</h4>
+      <p>~ 2014 Willamette Valley Pinot Gris</p> 
+
+      <h3><u>4th</u><h3> 
+      <h4>Duck + pecan steam cake </h4>
+      <h4>Pickled cherries </h4> 
+      <h4>Satsuma bacon cotton candy</h4>
+      <h4>Black currant Jus.</h4>
+      <p>~ 2013 Dundee Hills Pinot Noir</p> 
+
+      <h3><u>5th</u><h3> 
+      <h4>Filet of Double R Ranch New York</h4>
+      <h4>Rutabaga Yukon “bleu” croquette</h4> 
+      <h4>Bordelaise + Jacobsen Pinot Noir </h4>
+      <h4>Flake sea salt</h4>
+      <p>~ 2011 Dundee Hills Pinot Noir </p> 
+
+      <h3><u>6th</u><h3> 
+      <h4>Blood Orange Crème Brule </h4>
+      <h4>Saffron risotto + old Amsterdam</h4> 
+      <p>~ 2014 White Riesling</p> 
+
+      <h3>Cost:$75</h3>
+      <h3>Contact: 503-718-0007</h3>
       
     </div>
   </div>
