Slight change to champagne menu item

--- a/events.html
+++ b/events.html
@@ -49,8 +49,8 @@
       <h3><u>Champagne</u></h3>
       <p><b>$12</b></p>
       <h4>Toast for two</h4>
-      <p>Ruffino Proseco NV IT</p>
-      <p>187ml</p>
+      <p>Ruffino Proseco NV IT<br />
+      187ml</p>
     </div>
   </div>
 </div>
