--- a/events.html
+++ b/events.html
@@ -25,6 +25,44 @@
 <div id="events" class="content-block events-block">
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
+      <h2 class="heading-secondary">Holiday Celebration Features</h2>
+
+      <p>December 24th &amp; 25th 2016 | 4pm to 9pm<br />
+      Limited Availability <br />
+      Regular dinner menu also available</p> 
+      
+      <h3><u>Starter</u></h3>
+      <p><b>$10</b></p>
+      <h4>Clam &amp; Dungeness Crab Chowder</h4>
+      <p>“fresh cooked to order” with bacon yukon potato + veggies + old bay slow simmered veloute</p>
+
+      <h3><u>Entrée</u></h3>
+      <p><b>$18</b></p>
+      <h4>Apple Cider-brined Roasted Tom Turkey</h4>
+      <p>mashed potato + stuffing + root vegetables + cranberry + gravy</p>
+
+      <p><b>$25</b></p>
+      <h4>Slow Roasted Double R Ranch Prime Rib of Beef</h4>
+      <p>root vegetables + Yorkshire pudding + mashed potato + au jus</p>
+
+      <h3><u>Dessert</u></h3>
+      <p><b>$7</b></p>
+      <h4>Maple Spice Cake</h4>
+      <p>Layers spice cake soaked with rum &amp; brandy filled with maple spice buttercream</p>
+
+      <h4>Eggnog Cheesecake</h4>
+      <p>Creamy New York style with eggnog &amp; spiced rum with vanilla whipped &amp; caramel sauce</p>
+
+      <p><b>Kids Turkey Dinner</b></p>
+      <h4>$11</h4>
+      <p>12 years and under</p>
+    </div>
+  </div>
+</div>
+
+<div id="events" class="content-block events-block">
+  <div class="events-block-inner container">
+    <div class="feature-box text-center col-12-m col-8-l no-float center">
       <h2 class="heading-secondary">New Year's Eve 2016</h2>
 
       <p>Saturday December 31st, 2016 | 5pm to 10pm<br />
