Added reservations recommended

--- a/events.html
+++ b/events.html
@@ -29,6 +29,7 @@
 
       <p>December 24th &amp; 25th 2016 | 4pm to 9pm<br />
       Limited Availability <br />
+      Reservations Recommended <br />
       Regular dinner menu also available</p> 
       
       <h3><u>Starter</u></h3>
