--- a/events.html
+++ b/events.html
@@ -25,76 +25,18 @@
 <div id="events" class="content-block events-block">
   <div class="events-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">Holiday Celebration Features</h2>
+      <h2 class="heading-secondary">Valentine's Day</h2>
 
-      <p>December 24th &amp; 25th 2016 | 4pm to 9pm<br />
+      <p>February 14th 2017<br />
       Limited Availability <br />
       Reservations Recommended <br />
       Regular dinner menu also available</p> 
       
-      <h3><u>Starter</u></h3>
-      <p><b>$10</b></p>
-      <h4>Clam &amp; Dungeness Crab Chowder</h4>
-      <p>“fresh cooked to order” with bacon yukon potato + veggies + old bay slow simmered veloute</p>
-
-      <h3><u>Entrée</u></h3>
-      <p><b>$18</b></p>
-      <h4>Apple Cider-brined Roasted Tom Turkey</h4>
-      <p>mashed potato + stuffing + root vegetables + cranberry + gravy</p>
-
-      <p><b>$25</b></p>
-      <h4>Slow Roasted Double R Ranch Prime Rib of Beef</h4>
-      <p>root vegetables + Yorkshire pudding + mashed potato + au jus</p>
-
-      <h3><u>Dessert</u></h3>
-      <p><b>$7</b></p>
-      <h4>Maple Spice Cake</h4>
-      <p>Layers spice cake soaked with rum &amp; brandy filled with maple spice buttercream</p>
-
-      <h4>Eggnog Cheesecake</h4>
-      <p>Creamy New York style with eggnog &amp; spiced rum with vanilla whipped &amp; caramel sauce</p>
-
-      <p><b>Kids Turkey Dinner</b></p>
-      <h4>$11</h4>
-      <p>12 years and under</p>
-    </div>
-  </div>
-</div>
-
-<div id="events" class="content-block events-block">
-  <div class="events-block-inner container">
-    <div class="feature-box text-center col-12-m col-8-l no-float center">
-      <h2 class="heading-secondary">New Year's Eve 2016</h2>
-
-      <p>Saturday December 31st, 2016 | 5pm to 10pm<br />
-      Limited Availability <br />
-      Reservations Recommended</p> 
+      <h3><u>Coming Soon...</u></h3>
       
-      <h3><u>Starter</u></h3>
-      <p><b>$12</b></p>
-      <h4>Scampi style sautéed Prawns</h4>
-      <p>blistered tomatoes + basil nage + olive crostini</p>
-
-      <h3><u>Entrée</u></h3>
-      <p><b>$29</b></p>
-      <h4>Halibut &amp; Filet Mignon</h4>
-      <p>pan seared halibut with cara cara orange avocado salsa + bacon wrapped beef tenderloin steak red wine demi-glace + Potato blue cheese rosti + market vegetables</p>
-
-      <h3><u>Dessert</u></h3>
-      <p><b>$7</b></p>
-      <h4>Chocolate &amp; Raspberry Mousse “roulade”</h4>
-      <p>kirshwasser syrup soaked sponge cake filled with raspberry &amp; chocolate mousse</p>
-
-      <h3><u>Champagne</u></h3>
-      <p><b>$12</b></p>
-      <h4>Toast for two</h4>
-      <p>Ruffino Proseco NV IT<br />
-      187ml</p>
     </div>
   </div>
 </div>
-
-
 
 <script src="js/vendor/wow.js"></script>
 <script src="js/vendor/webfontloader.js"></script>
