--- a/events.html
+++ b/events.html
@@ -27,12 +27,40 @@
     <div class="feature-box text-center col-12-m col-8-l no-float center">
       <h2 class="heading-secondary">Valentine's Day</h2>
 
-      <p>February 14th 2017<br />
+      <p>Saturday February 11th through Tuesday February 14th<br />
+      5pm-9pm
       Limited Availability <br />
       Reservations Recommended <br />
       Regular dinner menu also available</p> 
-      
-      <h3><u>Coming Soon...</u></h3>
+
+      <h3><u>1st</u></h3>
+      <p><b>$12</b></p>
+      <h4>Griddled Rock Shrimp</h4>
+      <p>Kombu brined shrimp - Early grey citrus curd + smoked butternut pearls</p>
+
+      <h3><u>2nd</u></h3>
+      <p><b>$10</b></p>
+      <h4>Mozzarella”burrata” &amp; baby Cabo Tomato Salad</h4>
+      <p>micro greens + basil nage + aged balsamic + virgin olive oil + Jacobsen Sea Salt</p>
+
+      <h3><u>Entree</u></h3>
+      <p><b>$38</b></p>
+      <h4>Reserve New York Steak - certified Prime</h4>
+      <p>Truffle Yukon potato croquette + asparagus + cask demi</p>
+
+      <h3><u>Dessert</u></h3>
+      <p><b>$8</b></p>
+      <h4>Cherry Chocolate Short dough Tart</h4>
+      <p>Raspberry sauce &amp; vanilla chantilly cream</p>
+      <br />
+      <h4>or</h4>
+      <h4>Long-stem Strawberries</h4>
+      <p>vanilla-bean pastry cream + hot chocolate sauce</p>
+
+      <h3><u>Champagne Toast for Two</u></h3>
+      <p><b>$16</b></p>
+      <h4>Ruffino Prosecco NV IT</h4>
+
       
     </div>
   </div>
